# renju-ai

./: .gitmodules  CMakeLists.txt  README.md  gomoku.html  gomoku.tflite  main.cpp  renju.html  rule.cpp  rule.h  search.cpp  search.h  test.cpp
